--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "@clerk/express": "^1.5.1",
+    "@google/generative-ai": "^0.24.1",
     "@neondatabase/serverless": "^1.0.0",
     "@supabase/supabase-js": "^2.49.8",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
